--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 # Python dependencies
 python-dotenv==1.0.0
 Flask==3.0.0
+Flask-Login==0.6.3
+google-auth==2.25.1
+google-auth-oauthlib==1.1.0
+requests==2.31.0
