--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,15 @@
 # Gmail Configuration
 # Create a Gmail App Password at: https://myaccount.google.com/apppasswords
-GMAIL_USER=shomuran.services@gmail.com
-GMAIL_APP_PASSWORD=qvpmvcqaxsjuhthq
+GMAIL_USER=your_email@gmail.com
+GMAIL_APP_PASSWORD=your_16_character_app_password
 
+# Google OAuth Configuration
+# Get your Google Client ID from: https://console.cloud.google.com/
+# Go to: APIs & Services → Credentials
+GOOGLE_CLIENT_ID=your_client_id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_client_secret_here
 
+# Secret key for session management
+# Generate a random secret key for production use
+# You can generate one with: openssl rand -hex 32
+SECRET_KEY=your_secret_key_here
